tests/NormalTests/paczka2/big_fuzzy/93053151.err
Error in line 6: S173 A823 22,5
Error in line 12: 6SGw1jSi6b S671 52,0
Error in line 16: 6SGw1jSi6b S857 3,1
Error in line 26: xwMKTmM S173 81,6
Error in line 33: S173 S173 46,0
Error in line 38: 6SGw1jSi6b S173 63,5
Error in line 34: S173 S857 24,3
Error in line 49: 6SGw1jSi6b S857 84,5
Error in line 58: H8zY0UIaUF2 S671 17,3
Error in line 59: 6SGw1jSi6b S173 47,0
Error in line 64: 6SGw1jSi6b S857 -2,7
Error in line 57: tHJs S857 2,5
Error in line 69: 1XuMAkIc3q S173 16,5
Error in line 89: xwMKTmM S857 68,08
Error in line 86: xwMKTmM S173 83,0
Error in line 93: RhLeT S671 41,4
Error in line 99: H8zY0UIaUF2 S857 70,2
Error in line 96: xwMKTmM S857 133,5
Error in line 133: tHJs A823 -1,0
Error in line 140: 1XuMAkIc3q A823 79,5
Error in line 143: tHJs S671 53,2
Error in line 154: 6SGw1jSi6b S173 25,27
Error in line 157: 1XuMAkIc3q S173 39,3
Error in line 159: 1XuMAkIc3q A823 92,2
Error in line 168: 1XuMAkIc3q S857 70,3
Error in line 179: 1XuMAkIc3q A823 86,7
Error in line 180: 1XuMAkIc3q S173 1,2
Error in line 184: 1XuMAkIc3q S857 93,6
Error in line 189: S173 S857 94,3
Error in line 192: H8zY0UIaUF2 S671 94,9
Error in line 190: 1XuMAkIc3q A823 22,4
Error in line 196: H8zY0UIaUF2 S857 4,6
Error in line 220: tHJs S173 66,2
Error in line 222: 1XuMAkIc3q S857 -1,4
Error in line 221: tHJs S671 20,6
Error in line 218: xwMKTmM S173 624,1
Error in line 224: tHJs A823 7,7
Error in line 232: 1XuMAkIc3q A823 90,2
Error in line 204: H8zY0UIaUF2 S671 10,7
Error in line 241: tHJs S671 98,4
Error in line 237: 1XuMAkIc3q S857 23,3
Error in line 246: xwMKTmM A823 34,7
